Updated Javascript for playlist functionalities, audio & images

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   </head>
   <body>
     <h1>Ajay's Playlist</h1>
-    <div class="music-container">
+    <div class="music-container ">
       <div class="music-info">
-        <h4 id="title">Whatever</h4>
+        <h4 id="title">Smile for me</h4>
         <div class="progress-bar">
           <div class="progress"></div>
         </div>
       </div>
-      <audio src="audio/smileforme.mp3" id="audio"></audio>
+      <audio src="audio/simi.mp3" id="audio"></audio>
 
       <div class="img-container">
         <img src="img/simi.jpg" alt="music-cover" id="cover" />
